# table_is_long

./: .gitignore  README.md  pyproject.toml
exp/: experiments.py
fasttext/: accuracy.py  ft.py  labels.py  multimodel.py  trainer.py
ft/: ft.py  modelset.py  trainer.py
hyppo/: bayes.py  datasets.py  stopwords.py  tester.py  tq.py  trainer.py
log/: printer.py
mp/: mp.py
sh/: list.sh  once.sh  train-all.sh  train.sh
text/: features.py  indexer.py  norm.py  tokenize_mystem.py
