[tool.poetry]
name = "table_is_long"
version = "0.1.0"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^>=1.14"
pandas = "^0.23.4"
sklearn = "^0.0.0"
cython = ">=0.28.0"
tqdm = ">=4.26"
razdel = "^0.3.0"
mystem = "^0.1.0"

#fasttext = "^0.8.22"
fastText = {git = "https://github.com/facebookresearch/fastText.git"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
notebook = "^5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
